# waffle_fries_final

./: .gitignore  README.md  audio_setup_instructions.md  install_custom_kernel.sh  ksjd.txt  main.py  requirements.txt  setup_hardware.sh  update_kernel_config.sh  verify_audio.py  verify_webcam.py  webcam_setup_instructions.md
audio_video_processing/scripts/: analyze_spoken_to.py  integrated_laptop_processor.py  simplified_laptop_processor.py
data/conversation_data/: conversation_1_results.json  conversation_2_results.json  (+5 more)
launch/: face_detection.launch.py
log/: latest_build
models/: bert_intent_classifier.py  diarization_model.py  nemo_diarization_model.py  speaker_name_model.py  spoken_to_model.py
robot/: movement.py  spatial_audio.py
robot_audio_processor/: CMakeLists.txt  package.xml  setup.py
robot_audio_processor/launch/: audio_processor.launch.py  robot_processor.launch.py
robot_audio_processor/robot_audio_processor/: __init__.py  audio_processor_node.py
robot_audio_processor/robot_audio_processor/models/: __init__.py  diarization_model.py  spoken_to_model.py
robot_audio_processor/robot_audio_processor/utils/: __init__.py  speaker_context_manager.py
robot_audio_processor/scripts/: analyze_speaker_contexts.py  audio_processor_node.py  face_detection_node.py  movement_controller_node.py
scripts/: train_bert_model.py
src/: __init__.py
tests/: record_test_audio.py  test_diarization.py  test_diarization_memory.py  test_face_detection.py  test_nemo_diarization.py  test_spoken_to.py
utils/: rttm_parser.py  speaker_context_manager.py
(+41 files in other folders)
